created add pet form (in forms.py), handler for it(in app.py

--- a/templates/pet_list.html
+++ b/templates/pet_list.html
@@ -15,6 +15,6 @@
   </div>
   {% endfor %}
 </ul>
-<a href="/pets/new"><button>Add Pet</button></a>
+<a href="/add"><button>Add Pet</button></a>
 
 {% endblock %}
