--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../static/style.css" />
+    <link href=“https://bootswatch.com/5/minty/bootstrap.css” rel=“stylesheet”>
   </head>
   <body>
-    {% block content %} {% endblock %}
+    <div class="container">{% block content %} {% endblock %}</div>
   </body>
 </html>
