--- a/templates/pet_list.html
+++ b/templates/pet_list.html
@@ -16,5 +16,13 @@
   {% endfor %}
 </ul>
 <a href="/add"><button>Add Pet</button></a>
+<br>
+<div>
+  {{pf_info["name"]}}
+  {{pf_info["age"]}}
+  <img src="{{pf_info["photo_url"]}}" alt="random">
+
+
+</div>
 
 {% endblock %}
